# cpp_project_template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
source/: CMakeLists.txt
tests/: CMakeLists.txt
